other/b-d/check-serviceaccount/podcontroller-bad.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: baddeployment01
  namespace: check-sa-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      serviceAccountName: restricted
      containers:
      - image: busybox:1.35
        name: busybox
        args:
        - sleep
        - "300"
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob01
  namespace: check-sa-ns
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          serviceAccountName: restricted
          containers:
          - image: busybox:1.35
            name: busybox
            args:
            - sleep
            - "300"
          restartPolicy: OnFailure
