other/b-d/check-serviceaccount/01-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-sa
status:
  ready: true
