other/b-d/check-serviceaccount/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
policies:
- name: check-sa
  resources:
  - name: badpod01
    values:
      serviceAccountName: safe
  - name: goodpod01
    values:
      serviceAccountName: safe
